--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.instants.mols1993.planechase.MainActivity">
+    tools:context="com.mols1993.planechase.MainActivity">
 
     <LinearLayout
         android:layout_width="0dp"
