--- a/app/src/main/res/layout/activity_planechase.xml
+++ b/app/src/main/res/layout/activity_planechase.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.instants.mols1993.planechase.Planechase">
+    tools:context="com.mols1993.planechase.Planechase">
 
     <android.support.design.widget.AppBarLayout
         android:theme="@style/AppTheme.AppBarOverlay"
