--- a/app/src/main/res/layout/content_planechase.xml
+++ b/app/src/main/res/layout/content_planechase.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.instants.mols1993.planechase.Planechase"
+    tools:context="com.mols1993.planechase.Planechase"
     tools:showIn="@layout/activity_planechase">
 
     <ImageView
